--- a/.ftpconfig
+++ b/.ftpconfig
@@ -6,7 +6,7 @@
     "pass": "Sativa5466",
     "promptForPass": false,
     "remote": "/home/pi",
-    "local": "/Users/shiba-t",
+    "local": "Users/shiba-t",
     "agent": "",
     "privatekey": "",
     "passphrase": "",
